Implement combo creation and management for shops and customers, including price calculation and item handling